Replace Runtime.exec() with ProcessBuilder for improved security and testability
This migration addresses GitHub issue #126 by replacing all instances of the legacy
Runtime.getRuntime().exec() approach with the modern ProcessBuilder API.

Changes:
• GitOperations: Replaced Runtime.exec() with ProcessBuilder in runOnConsole() and runOnConsoleForOutput()
• FastTestCommitRevertMainExtension: Updated AppleScript execution to use ProcessBuilder
• Added ProcessExecutor interface for dependency injection and better testability
• Added ProcessBuilderExecutor implementation using ProcessBuilder API
• Added comprehensive GitOperationsTest with 10 test cases verifying exact command execution
• Extracted legacy stream reading and process management into ProcessBuilderExecutor

Security improvements:
• Eliminates shell injection vulnerabilities through explicit argument arrays
• Prevents shell interpretation of commands and arguments
• Better process isolation and environment control

Testing improvements:
• Mock-based testing verifies exact git commands without executing them
• Dependency injection pattern allows testing without changing public APIs
• Comprehensive test coverage for all git operations (commit, revert, amend, status)

All 15 tests passing, ensuring zero regression in functionality.

Closes #126
Closes #8

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>